--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>React App</title>
+    <title>ESC Avstemming</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
